--- a/Soloud/app/src/main/res/layout/place_search_fragment.xml
+++ b/Soloud/app/src/main/res/layout/place_search_fragment.xml
@@ -20,24 +20,26 @@
 -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:theme="@style/MyToolbar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        />
 
     <FrameLayout
         android:id="@+id/place_search_map_placeholder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/place_search_cardview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/current_place_cardview">
+
         <EditText
             android:id="@+id/place_search_edittext"
             android:layout_width="match_parent"
@@ -47,23 +49,31 @@
             android:background="@android:color/transparent"
             android:inputType="text"
             android:imeOptions="actionSearch"
-            android:padding="@dimen/cardview_padding"/>
-    </android.support.v7.widget.CardView>
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:layout_below="@id/toolbar"
+            android:drawableLeft="@drawable/ic_search_black_24dp"
+            android:drawableStart="@drawable/ic_search_black_24dp"
+            android:drawablePadding="8dp"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/current_place_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/place_search_cardview"
+        android:layout_below="@id/place_search_edittext"
         android:layout_marginLeft="@dimen/cards_margin"
         android:layout_marginRight="@dimen/cards_margin"
         android:clickable="true"
         android:foreground="?attr/selectableItemBackground">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/cardview_padding"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/current_place_title"
                 android:layout_width="match_parent"
@@ -111,14 +121,21 @@
         app:backgroundTint="@color/primary"
         app:borderWidth="0dp"
         app:elevation="@dimen/action_button_elevation"
-        app:fabSize="normal"/>
+        app:fabSize="normal"
+        android:visibility="gone"/>
 
-    <ProgressBar
+
+    <com.pnikosis.materialishprogress.ProgressWheel
         android:id="@+id/place_search_progressbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_above="@id/terms_and_policy_TV"
         android:layout_centerInParent="true"
-        android:indeterminate="true"
-        android:visibility="invisible" />
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        tools:visibility="visible"
+        wheel:matProg_barColor="@color/colorPrimary"
+        wheel:matProg_barWidth="2dp"
+        wheel:matProg_progressIndeterminate="true" />
 
 </RelativeLayout>
