--- a/Soloud/app/src/main/res/layout/user_post_fragment.xml
+++ b/Soloud/app/src/main/res/layout/user_post_fragment.xml
@@ -68,18 +68,18 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/post_info_TV"
             android:layout_marginTop="16dp"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/place_IV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 app:srcCompat="@drawable/ic_place_black_24dp"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"/>
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                />
 
             <TextView
                 android:id="@+id/add_location_TV"
@@ -89,28 +89,9 @@
                 android:layout_marginStart="16dp"
                 android:layout_toEndOf="@+id/place_IV"
                 android:layout_toRightOf="@+id/place_IV"
-                android:text="@string/add_your_location"
+                android:text="@string/check_in"
                 android:layout_centerVertical="true"
-                android:textSize="16sp" />
-
-            <!--<LinearLayout
-                android:id="@+id/autocomplete_LL"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/place_IV"
-                android:layout_toEndOf="@+id/place_IV"
-                android:visibility="gone"
-                tools:visibility="visible">
-            <fragment
-                android:id="@+id/place_autocomplete_fragment"
-                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-16dp"
-
-                />
-            </LinearLayout>-->
-
+                android:textSize="18sp" />
 
         </RelativeLayout>
 
