--- a/Soloud/app/src/main/res/layout/activity_login2.xml
+++ b/Soloud/app/src/main/res/layout/activity_login2.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.LoginActivity">
 
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/mySecondary">
+        android:layout_height="match_parent">
 
 
         <FrameLayout
@@ -22,8 +19,8 @@
                 android:id="@+id/background_IV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
                 android:layout_gravity="top"
+                android:scaleType="centerCrop"
                 android:src="@drawable/soloud_login" />
 
             <ImageView
@@ -33,8 +30,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="48dp"
-                android:background="@drawable/ic_launcher1"
-                />
+                android:background="@drawable/ic_launcher1" />
 
             <RelativeLayout
                 android:id="@+id/card_RL"
@@ -46,15 +42,14 @@
                 <TextView
                     android:id="@+id/soloud_TV"
                     android:layout_width="200dp"
-                    android:gravity="center"
                     android:layout_height="wrap_content"
-                    android:singleLine="true"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="24dp"
-                    android:text="SoLoud"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:text="@string/app_name"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="36sp"
-                    />
+                    android:textSize="36sp" />
 
                 <TextView
                     android:id="@+id/promo_TV"
@@ -94,18 +89,6 @@
             </RelativeLayout>
 
         </FrameLayout>
-
-        <com.pnikosis.materialishprogress.ProgressWheel
-            android:id="@+id/progress_wheel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="4dp"
-            android:visibility="gone"
-            tools:visibility="visible"
-            wheel:matProg_barColor="@android:color/white"
-            wheel:matProg_barWidth="2dp"
-            wheel:matProg_progressIndeterminate="true" />
 
     </RelativeLayout>
 
