--- a/Soloud/app/src/main/res/layout/category_row.xml
+++ b/Soloud/app/src/main/res/layout/category_row.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="180dp" >
+    android:layout_height="180dp">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="#ffffff"
+            android:textColor="@android:color/white"
             android:textSize="30sp"
             tools:text="Category Name" />
 
