--- a/Soloud/app/src/main/res/values/styles.xml
+++ b/Soloud/app/src/main/res/values/styles.xml
@@ -39,7 +39,14 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="LoginStyle" parent="@style/Theme.AppCompat.Light.NoActionBar">
+    <style name="TransparentStatusBarStyle" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="colorPrimaryDark">@android:color/transparent</item>
+    </style>
+
+    <style name="NoToolbarStyle" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowContentOverlay">@null</item>
