--- a/Soloud/app/src/main/res/layout/place_list_item.xml
+++ b/Soloud/app/src/main/res/layout/place_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/place_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,10 +10,26 @@
     android:layout_marginLeft="@dimen/cards_margin"
     android:layout_marginRight="@dimen/cards_margin">
 
+    <ImageView
+        android:id="@+id/check_IV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        tools:src="@drawable/ic_check_24dp"
+        android:layout_centerVertical="true"
+        app:srcCompat="@drawable/ic_check_24dp"
+        />
+
     <TextView
         android:id="@+id/place_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@id/check_IV"
+        android:layout_toStartOf="@id/check_IV"
         android:ellipsize="end"
         android:maxLines="1"
         android:textSize="17sp"
@@ -24,10 +41,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/place_name"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@id/check_IV"
+        android:layout_toStartOf="@id/check_IV"
         android:ellipsize="end"
         android:maxLines="1"
         android:textSize="15sp"
         tools:text="Ethniki Odos Patron Pyrgou"/>
+
 
 </RelativeLayout>
 
