--- a/Soloud/app/src/main/res/layout/activity_login2.xml
+++ b/Soloud/app/src/main/res/layout/activity_login2.xml
@@ -4,7 +4,7 @@
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.LoginActivity">
+    tools:context=".login.LoginActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
