--- a/Soloud/app/src/main/res/layout/tab_indicator.xml
+++ b/Soloud/app/src/main/res/layout/tab_indicator.xml
@@ -7,5 +7,5 @@
     android:gravity="center"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:textColor="@color/colorPrimary"
+    android:textColor="@android:color/white"
     android:textSize="14sp" />
